--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,19 @@
 }
 
 body {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+    font-family:monospace;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+  }
 
 .center {
     margin: auto;
-    width: 80%;
-    border: 3px solid rgb(98, 0, 128);
-    padding: 10px;
+    width: 55%;
+    border: 3px solid rgb(0, 0, 0);
+    padding: 20px;
     text-align: center;
+    background-image: url("https://assets.faceit-cdn.net/third_party/games/ce652bd4-0abb-4c90-9936-1133965ca38b/assets/votables/7197a969-81e4-4fef-8764-55f46c7cec6e_1695819158849.jpeg");
+    background-size: 100% 100%;
   }
 .Logo {
     width: 70px;
