--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+div {
+  background-color: rgb(78, 78, 78);
+}
+
 .jeejee {
   font-size: xx-large;
 }
@@ -14,6 +18,7 @@ body {
     border: 3px solid rgb(0, 0, 0);
     padding: 20px;
     text-align: center;
+    background-image: url(https://preludi.fi/wp-content/uploads/2024/07/image_processing20230810-35-1tkecnx.webp);
     background-size: 100% 100%;
   }
 .Logo {
