--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ table {
       border: none;
     
       color: #fff;
-      background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
+      background: linear-gradient(180deg, #000000 50%, #ff0000 100%);
        background-origin: border-box;
       box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
       user-select: none;
